# gtk-template

./: CMakeLists.txt
scripts/: bootstrap.sh  build.sh
src/: main.cpp
